src/test/deca/syntax/invalid/created/test-op6.deca
//test-op6.deca:3:6: extraneous input '=' expecting {'new', 'null', 'readInt', 'readFloat', 'this', 'false', 'true', '(', '!', '-', FLOAT, INT, IDENT, STRING}
{
    a-=5;
}